<resources>
    <string name="app_name" translatable="false">WorkoutLogger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be longer than 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="exercises">Exercises</string>
    <string name="home">Home</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="password_required">Please enter a password</string>
    <string name="email_required">Please enter a valid email</string>
    <string name="password_length">Password is required and must be at least 8 characters long</string>
    <string name="username_required">Username is required</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="too_many_requests">Too many tries signing in to this account, please try again later</string>
    <string name="abort_workout_message">Are you sure you want to abort the workout?\nAll data will be lost.</string>
    <string name="abort_workout_title">Abort Workout</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="email_taken">This email is already in use by another user</string>
    <string name="enter_an_exercise_error">Please enter a exercise name</string>
    <string name="server_error_on_exercise_creation">Something went wrong when creating the exercise. Please try again</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="search">Search…</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="start_workout">Start Workout</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="add_set">Add Set</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="finish_workout">Finish workout</string>
    <string name="workout_name_required">Please enter a name for your workout</string>
    <string name="user_not_logged_in">User is not logged in</string>
    <string name="unexpected_error_message">An unexpected error occurred. Please try again. If the problem persists, please contact support.</string>
    <string name="no_workouts_found">No workouts found</string>
    <string name="unexpected_error_getting_workouts">Unexpected error getting workouts</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="personal_records">Personal records</string>
    <string name="no_records_text">No records recorded yet</string>
    <string name="latest_workouts">My Latest Workouts</string>
    <string name="more_workouts_text">See more workouts in the full log</string>
    <string name="see_full_log">See full log</string>
    <string name="dark_mode" translatable="false">Dark mode</string>
    <string name="cannot_finish_workout">Cannot Finish Workout</string>
    <string name="add_exercise_before_finish_text">Please add at least one exercise to finish the workout.</string>
    <string name="no_exercise">No exercises found</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="reps_text" translatable="false">%1$d RM</string>
    <string name="weight_text" translatable="false">%1$d kg</string>
</resources>