<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragments.ExerciseListFragment"
    android:orientation="vertical">

    <!-- Search Field -->
    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_edittext_background"
        android:queryBackground="@android:color/transparent"
        android:inputType="text" />


    <!-- Loading spinner -->
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/no_exercise_text"
        android:text="@string/no_exercise"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/exercise_recyclerView" />

    <!-- Button -->
    <Button
        android:id="@+id/add_exercise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:padding="8dp" />
</LinearLayout>
